[project]
authors = [
    { name = "Yifei Liu", email = "34564223+EzekielDaun@users.noreply.github.com" },
]
name = "ARL-utils-py"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["python-ranges>=1.2.2,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
arl_utils_py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test.tasks]
test = "pytest -s --basetemp=./tmp"
test_parallel = "pytest -n auto -s --basetemp=./tmp"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"
matplotlib = "*"

[tool.pixi.dependencies]
numpy = ">=2.2.3,<3"
scipy = ">=1.15.2,<2"

[tool.pixi.environments]
test = ["test"]

[dependency-groups]
test = ["pytest"]
